--- a/SSR.WebAPI/appsettings.json
+++ b/SSR.WebAPI/appsettings.json
@@ -4,8 +4,8 @@
     "DbPubName": "Test",
 
     "ConnectionString": "mongodb://localhost:27017",
-    "UserCollectionName": "Users",
-    "RoleCollectionName": "Roles",
+    "UserCollectionName": "User",
+    "RoleCollectionName": "Role",
     "ModuleCollectionName": "Modules",
     "MenuCollectionName": "Menu",
     "LoggingCollectionName": "Loggings",
