--- a/SSR.WebAPI/appsettings.json
+++ b/SSR.WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "DbSettings": {
-    "DatabaseName": "Test",
-    "DbPubName": "Test",
+    "DatabaseName": "Data",
+    "DbPubName": "Data",
 
     "ConnectionString": "mongodb://localhost:27017",
     "UserCollectionName": "Users",
