--- a/SSR.WebAPI/appsettings.json
+++ b/SSR.WebAPI/appsettings.json
@@ -22,6 +22,7 @@
     "VideosCollectionName": "Videos",
     "ChucVuCollectionName": "ChucVu",
     "StatusCollectionName": "Status",
+    "GroupCollectionName": "Group",
 
     "LoaiDanhMucCollectionName": "LoaiDanhMuc",
     "DanhMucCollectionName": "DanhMuc",
