--- a/SSR.WebAdmin/package.json
+++ b/SSR.WebAdmin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blowstack/ckeditor-nuxt": "^0.6.0",
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-ui": "^36.0.1",
     "@fullcalendar/bootstrap": "^5.7.2",
     "@fullcalendar/core": "^5.7.2",
     "@fullcalendar/daygrid": "^5.7.2",
@@ -36,6 +37,7 @@
     "firebase": "^8.6.8",
     "metismenujs": "^1.3.0",
     "moment": "^2.29.4",
+    "nuxt": "^3.2.2",
     "pdf-viewer-vue": "^0.2.7",
     "simplebar-vue": "^1.6.4",
     "url-slug": "^3.0.4",
@@ -69,6 +71,7 @@
     "vue2-dropzone": "^3.6.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.6",
+    "vuetify": "^3.1.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
