--- a/SSR.WebAPI/appsettings.json
+++ b/SSR.WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "DbSettings": {
-    "DatabaseName": "Data",
-    "DbPubName": "Data",
+    "DatabaseName": "HT",
+    "DbPubName": "HT",
 
     "ConnectionString": "mongodb://localhost:27017",
     "UserCollectionName": "User",
@@ -15,6 +15,7 @@
     "CategoriesCollectionName": "Categories",
     "TagsCollectionName": "Tags",
     "PostsCollectionName": "Posts",
+    "ProjectCollectionName": "Project",
     "EmployeesCollectionName": "Employees",
     "GalleriesCollectionName": "Galleries",
     "RoomsCollectionName": "Rooms",
